# compo

./: Cargo.toml
components/host/: host.c  host.h  host.wit
components/rcmp/: Cargo.toml
components/rcmp/src/: bindings.rs  lib.rs
components/rcmp/wit/: rcmp.wit
lib/some/: some.c  some.h
nostd_comp/: Cargo.toml
nostd_comp/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: main.rs
test/port/: game.vert.spv  main.c  ovly.frag.spv
test/sdl3/: main.c
test/shdr/: game.frag.glsl  game.frag.hlsl  game.frag.msl  game.frag.spv  game.frag.spv.msl  game.vert.glsl  game.vert.hlsl  game.vert.msl  game.vert.spv.msl  ovly.vert.spv
test/triangle/: PositionColor.vert.glsl  PositionColor.vert.glsl.spv  SolidColor.frag.glsl  SolidColor.frag.glsl.spv  main.c
test/triangle_wextra_params/: PositionColor.vert.glsl  PositionColor.vert.glsl.spv  README  main.c
test/triangle_wuniform/: PositionColor.vert.glsl  PositionColor.vert.glsl.spv  README  SolidColor.frag.glsl  SolidColor.frag.glsl.spv  main.c
