[package]
name = "rcmp"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = "0.34.0"
wit-bindgen-rt = "0.34.0"
wit-bindgen-rust-macro = "0.34.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component.target.dependencies]
"wasi:filesystem" = {path = "wit/deps/filesystem"}
"wasi:io" = {path = "wit/deps/io"}
"wasi:random" = {path = "wit/deps/random"}
"wasi:clocks" = {path = "wit/deps/clocks"}
"wasi:sockets" = {path = "wit/deps/sockets"}
"wasi:cli" = {path = "wit/deps/cli"}
"wasi:http" = {path = "wit/deps/http"}